<resources>
    <string name="app_name">Tasks n Goals</string>

    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="goals">Goals</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="task">Task</string>
    <string name="all_day">All-day</string>

    <string name="repeat_prepend">Repeat +</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="days">Days</string>
    <string name="day">Day</string>
    <string name="weeks">Weeks</string>
    <string name="week">Week</string>
    <string name="months">Months</string>
    <string name="month">Month</string>
    <string name="years">Years</string>
    <string name="year">Year</string>
    <string name="repeat_append">from completion</string>
    <string name="does_not_repeat_after_completion">Does not repeat after completion</string>
    <string name="error_empty_task_name">Give the task a name!</string>
    <string name="task_complete_message">Good job!</string>
    <string name="task_complete_with_repeat_message">Good job! the next deadline is on %s</string>
    <string name="oops">Oops. Something went wrong.</string>
    <string name="error_deadline_in_past">Cannot set a deadline in the past</string>
</resources>