<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:text="Task" />

    <ImageView
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:src="@drawable/ic_outline_task_24"
        android:layout_gravity="center"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="1dp"
                android:layout_height="480dp"
                android:visibility="invisible" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mtrl_card_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="?attr/actionBarSize"
                android:elevation="96dp"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_view_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/task"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_task"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/ic_outline_task_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_view_mode" />

                    <EditText
                        android:id="@+id/et_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="16dp"
                        android:maxLength="60"
                        android:inputType="textCapSentences"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_task"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_task"
                        app:layout_constraintTop_toTopOf="@id/iv_task"
                        tools:text="Vacuum the apartment" />

                    <ImageView
                        android:id="@+id/iv_date"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_calendar_24"
                        app:layout_constraintBottom_toBottomOf="@+id/switch_all_day"
                        app:layout_constraintEnd_toEndOf="@id/iv_task"
                        app:layout_constraintStart_toStartOf="@id/iv_task"
                        app:layout_constraintTop_toTopOf="@+id/switch_all_day" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_all_day"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/all_day"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/et_title"
                        app:layout_constraintTop_toBottomOf="@id/et_title" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintEnd_toStartOf="@+id/tv_time"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="@id/et_title"
                        app:layout_constraintTop_toBottomOf="@+id/switch_all_day"
                        tools:text="Tue, 5 May 2021" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:paddingStart="24dp"
                        android:paddingEnd="8dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintBottom_toBottomOf="@id/tv_date"
                        app:layout_constraintEnd_toEndOf="@id/switch_all_day"
                        app:layout_constraintTop_toTopOf="@id/tv_date"
                        tools:text="16:00" />

                    <ImageView
                        android:id="@+id/iv_repeat"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_refresh_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/iv_task"
                        app:layout_constraintStart_toStartOf="@id/iv_task"
                        app:layout_constraintTop_toBottomOf="@id/tv_date" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_repeat_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_repeat"
                        app:layout_constraintTop_toBottomOf="@id/tv_date"
                        tools:text="Repeats 1 week after completion" />

                    <LinearLayout
                        android:id="@+id/layout_edit_repeat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_repeat"
                        app:layout_constraintTop_toBottomOf="@id/tv_date"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_repeat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:text="@string/repeat_prepend"/>

                        <EditText
                            android:id="@+id/et_repeat_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:minWidth="0dp"
                            android:maxLength="3"
                            android:maxEms="3"
                            android:minEms="2"
                            android:ems="3"
                            android:gravity="end"
                            android:inputType="number"
                            android:text="1"
                            tools:ignore="HardcodedText" />

                        <EditText
                            android:id="@+id/et_repeat_time_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:text="@string/day"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_repeat_append"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:text="@string/repeat_append"/>


                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="1dp"
                android:layout_height="480dp"
                android:visibility="invisible" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="end"
        app:menu="@menu/task_app_bar_detail"
        app:navigationIcon="@drawable/ic_arrow_back_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_complete_24"
        app:layout_anchor="@id/bottom_app_bar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>